# WiFry

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNBOOKS.md  SETUP.md  WORKFLOW.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  observability.py
backend/app/experimental/: __init__.py
backend/app/mitmproxy_addon/: stream_tap.py
backend/app/models/: adb.py  analysis_packs.py  capture.py  collaboration.py  dns.py  impairment.py  network_config.py  observability.py  profile.py  (+6 more)
backend/profiles/: 3G Mobile.json  4G Mobile.json  Average WiFi.json  Crowded Apartment.json  DNS Blocking.json  DNS Failover.json  Flaky WiFi.json  Good WiFi.json  Hotel WiFi.json  ISP Throttled.json  Perfect.json  Poor WiFi.json  Satellite.json  Secure DNS.json  Slow DNS.json  Transatlantic.json  Unreliable DNS.json  WiFi Edge Coverage.json  Worst Case.json
backend/tests/: conftest.py  test_adb.py  test_annotations.py  test_api.py  test_captures.py  test_coverage_boost.py  test_dash_parser.py  test_dns.py  test_factory_reset.py  test_feature_flags_service.py  test_fileio_service.py  test_hls_parser.py  test_impairments.py  test_network_config_service.py  test_observability.py  test_profiles.py  test_profiles_extended.py  test_report_generator_service.py  test_runtime_state_boundaries.py  test_scenarios_api.py  test_services.py  test_sessions.py  test_settings_manager_service.py  test_sharing.py  test_storage_scheduler.py  test_streams.py  test_system.py  test_system_extended.py  test_tc_manager.py
(+172 files in other folders)
